--- a/index.html
+++ b/index.html
@@ -4,113 +4,131 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <!--MODERN-NORMALIZE  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+  
   <link rel="stylesheet" href="./css/style.css" />
   <title>WebStudio</title>
 </head>
 <body>
 
-  <!-- HEDER -->
-  <header class="header">
-    <nav class="nav">
-    <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-      <ul class="list-nav">
-        <li><a class="link current" href="./index.html">Студія</a></li>
-        <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-        <li><a class="link" href="#">Контакти</a></li>
-      </ul>
-    </nav>
+  <!-- HEDEAR -->
+  <header class="header container">
+    <div class="container header-container">
+      <nav class="nav">
+      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+        <ul class="list-nav list">
+          <li class="item-list"><a class="link current" href="./index.html">Студія</a></li>
+          <li class="item-list"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="item-list"><a class="link" href="#">Контакти</a></li>
+        </ul>
+      </nav>
 
-    <ul class="list-contact">
-      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
+      <ul class="list-contact list">
+        <li class="item-contact"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </div>
   </header>
   <main>
 
     <!-- HERO -->
     <section class="hero">
-      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-      <button class="btn-hero" type="button">Замовити послугу</button>
+      <div class="container hero-box">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="btn-hero" type="button">Замовити послугу</button>
+      </div>
     </section>
 
     <!-- ADVANTAGES -->
-    <section class="section">
+    <section class="advantages section">
       <h2>Переваги</h2>
-      <ul class="list-advantages">
-        <li>
-          <h3 class=title>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-          <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-          <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-          <h3 class="title">ПЛАНУВАННЯ</h3>
-          <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
-        </li>
-        <li>
-          <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-      </ul>
+        <div class="container">
+          <ul class="list-advantages list">
+            <li class="item-advantages">
+              <h3 class=advantages-title>УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="advantages-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li class="item-advantages">
+              <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="advantages-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li class="item-advantages">
+              <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
+              <p class="advantages-text">Так само консультація з широким активом значною мірою зумовлює</p>
+            </li>
+            <li class="item-advantages">
+              <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="advantages-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+          </ul>
+      </div>
     </section>
 
     <!-- WORK -->
-    <section class="section">
-      <h2 class="section-title">Чим ми займаємося</h2>
-      <ul class="list-work">
-        <li>
-          <img src="./images/img-work-1.jpg" alt="зображення роботи над кодом" width="370" height="294">
-        </li>
-        <li>
-          <img src="./images/img-work-2.jpg" alt="зображення роботи над мобільним додатком" width="370" height="294">
-        </li>
-        <li>
-          <img src="./images/img-work-1.jpg" alt="зображення роботи над дизайном" width="370" height="294">
-        </li>
-      </ul>
+    <section class="work section">
+      <div class="container">
+        <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="list-work list">
+            <li>
+              <img src="./images/img-work-1.jpg" alt="зображення роботи над кодом" width="370" height="294">
+            </li>
+
+            <li>
+              <img src="./images/img-work-2.jpg" alt="зображення роботи над мобільним додатком" width="370" height="294">
+            </li>
+
+            <li>
+              <img src="./images/img-work-1.jpg" alt="зображення роботи над дизайном" width="370" height="294">
+            </li>
+          </ul>
+      </div>
     </section>
 
     <!-- TEAM -->
-    <section class="section">
-      <h2 class="section-title">Наша команда</h2>
-      <ul class="list-team">
-        <li>
-          <img src="./images/img-product-designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-          <h3 class="title">Ігор Дем'яненко</h3>
-          <p class="text" lang="en">Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/img-frontend-developer.jpg" alt="Ольга Рєпіна" width="270" height="260">
-          <h3 class="title">Ольга Рєпіна</h3>
-          <p class="text" lang="en">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/img-marketing.jpg" alt="Микола Тарасов" width="270" height="260">
-          <h3 class="title">Микола Тарасов</h3>
-          <p class="text" lang="en">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/img-ul-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
-          <h3 class="title">Михайло Єрмаков</h3>
-          <p class="text" lang="en">UI Designer</p>
-        </li>
-      </ul>
+    <section class="team section">
+      <div class="container">
+        <h2 class="section-title">Наша команда</h2>
+          <ul class="list-team list">
+            <li class="item-team">
+              <img src="./images/img-product-designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+              <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+              <p class="team-text" lang="en">Product Designer</p>
+            </li>
+            <li class="item-team">
+              <img src="./images/img-frontend-developer.jpg" alt="Ольга Рєпіна" width="270" height="260">
+              <h3 class="team-subtitle">Ольга Рєпіна</h3>
+              <p class="team-text" lang="en">Frontend Developer</p>
+            </li>
+            <li class="item-team">
+              <img src="./images/img-marketing.jpg" alt="Микола Тарасов" width="270" height="260">
+              <h3 class="team-subtitle">Микола Тарасов</h3>
+              <p class="team-text" lang="en">Marketing</p>
+            </li>
+            <li class="item-team">
+              <img src="./images/img-ul-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
+              <h3 class="team-subtitle">Михайло Єрмаков</h3>
+              <p class="team-text" lang="en">UI Designer</p>
+            </li>
+          </ul>
+    </div>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer class="footer">
-    <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-    <address class="footer-address">
-      <ul class="footer-list">
-        <li><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="container">
+      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 </html>
