--- a/index.html
+++ b/index.html
@@ -94,23 +94,34 @@
           <ul class="list-team list">
             <li class="item-team">
               <img src="./images/img-product-designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-              <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-              <p class="team-text" lang="en">Product Designer</p>
+              <div class="card-team">
+                <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+                <p class="team-text" lang="en">Product Designer</p>
+              </div>
             </li>
+
             <li class="item-team">
               <img src="./images/img-frontend-developer.jpg" alt="Ольга Рєпіна" width="270" height="260">
-              <h3 class="team-subtitle">Ольга Рєпіна</h3>
-              <p class="team-text" lang="en">Frontend Developer</p>
+              <div class="card-team">
+                <h3 class="team-subtitle">Ольга Рєпіна</h3>
+                <p class="team-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
+
             <li class="item-team">
               <img src="./images/img-marketing.jpg" alt="Микола Тарасов" width="270" height="260">
-              <h3 class="team-subtitle">Микола Тарасов</h3>
-              <p class="team-text" lang="en">Marketing</p>
+              <div class="card-team">
+                <h3 class="team-subtitle">Микола Тарасов</h3>
+                <p class="team-text" lang="en">Marketing</p>
+              </div>
             </li>
+
             <li class="item-team">
               <img src="./images/img-ul-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
-              <h3 class="team-subtitle">Михайло Єрмаков</h3>
-              <p class="team-text" lang="en">UI Designer</p>
+              <div class="card-team">
+                <h3 class="team-subtitle">Михайло Єрмаков</h3>
+                <p class="team-text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
     </div>
