--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
           <ul class="list-nav list">
             <li class="item-list"><a class="link" href="./index.html">Студія</a></li>
-            <li class="item-list"><a class="link  current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item-list"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
             <li class="item-list"><a class="link" href="#">Контакти</a></li>
           </ul>
         </nav>
@@ -28,75 +28,101 @@
         </ul>
       </div>
     </header>
-  <main>
-    <section class="portfolio section">
-      <div class="container">
-          <h1 class="portfolio-title">Портфоліо</h1>
-          <ul class="list-btn list">
-            <li>
-              <button class="btn-portfolio active" type="button">Усі</button>
-            </li>
-            <li>
-              <button class="btn-portfolio" type="button">Веб-сайти</button>
-            </li>
-            <li>
-              <button class="btn-portfolio" type="button">Веб-сайти</button>
-            </li>
-            <li>
-              <button class="btn-portfolio" type="button">Дизайн</button>
-            </li>
-            <li>
-              <button class="btn-portfolio" type="button">Маркетинг</button>
-            </li>
-          </ul>
 
-          <ul class="list-portfolio list">
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.1-min.png" alt="Зображений ноутбук з відкритим сайтом" height="294" width="370">
-              <h2 class="title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.2-min.png" alt="Постер з двома баскедболістами" height="294" width="370">
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p class="text">Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.3-min.png" alt="Логотип ресторану" height="294" width="370">
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="text">Додаток</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.4-min.png" alt="Зображення чорних навушників" height="294" width="370">
-              <h2 class="title">Проєкт Prime</h2>
-              <p class="text">Маркетинг</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.5-min.png" alt="Зображення двох коробок" height="294" width="370">
-              <h2 class="title">Проєкт Boxes</h2>
-              <p class="text">Додаток</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.6-min.png" alt="Монітор комп'ютера" height="294" width="370">
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.7-min.png" alt="Зображиний журнал" height="294" width="370">
-              <h2 class="title">Видання Limited Edition</h2>
-              <p class="text">Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.8-min.png" alt="Зображеня лейбла" height="294" width="370">
-              <h2 class="title">Проєкт LAB</h2>
-              <p class="text">Маркетинг</p>
-            </li>
-            <li>
-              <img src="./images/portfolio-images/portfolio-img.9-min.png" alt="Зображиний ноутбук" height="294" width="370">
-              <h2 class="title">Growing Business</h2>
-              <p class="text">Додаток</p>
-            </li>
-          </ul>
+  <main>
+    <section class="portfolio sectio">
+      <div class="container">
+      <h1>Портфоліо</h1>
+      <ul class="list-btn list">
+        <li>
+          <button class="btn-portfolio active" type="button">Усі</button>
+        </li>
+        <li>
+          <button class="btn-portfolio" type="button">Веб-сайти</button>
+        </li>
+        <li>
+          <button class="btn-portfolio" type="button">Веб-сайти</button>
+        </li>
+        <li>
+          <button class="btn-portfolio" type="button">Дизайн</button>
+        </li>
+        <li>
+          <button class="btn-portfolio" type="button">Маркетинг</button>
+        </li>
+      </ul>
+
+      <ul class="list-portfolio list">
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.1-min.png" alt="Зображений ноутбук з відкритим сайтом" height="294" width="370">
+          <div class="portfolio-card">
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.2-min.png" alt="Постер з двома баскедболістами" height="294" width="370">
+          <div class="portfolio-card">
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <p class="text">Дизайн</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.3-min.png" alt="Логотип ресторану" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Ресторан Seafood</h2>
+            <p class="text">Додаток</p>
+          </div>
+        </li>
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.4-min.png" alt="Зображення чорних навушників" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Проєкт Prime</h2>
+            <p class="text">Маркетинг</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.5-min.png" alt="Зображення двох коробок" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Проєкт Boxes</h2>
+            <p class="text">Додаток</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.6-min.png" alt="Монітор комп'ютера" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.7-min.png" alt="Зображиний журнал" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Видання Limited Edition</h2>
+            <p class="text">Дизайн</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.8-min.png" alt="Зображеня лейбла" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Проєкт LAB</h2>
+            <p class="text">Маркетинг</p>
+          </div>
+        </li>
+
+        <li>
+          <img src="./images/portfolio-images/portfolio-img.9-min.png" alt="Зображиний ноутбук" height="294" width="370">
+          <div  class="portfolio-card">
+            <h2 class="title">Growing Business</h2>
+            <p class="text">Додаток</p>
+          </div>
+        </li>
+      </ul>
     </div>
     </section>
   </main>
@@ -104,7 +130,7 @@
     <div class="container">
       <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
       <address class="footer-address">
-        <ul class="footer-list">
+        <ul class="footer-list list">
           <li><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
