--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- HEDEAR -->
-  <header class="header container">
+  <header class="header">
     <div class="container header-container">
       <nav class="nav">
       <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
@@ -35,8 +35,8 @@
   <main>
 
     <!-- HERO -->
-    <section class="hero">
-      <div class="container hero-box">
+    <section class="hero section">
+      <div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="btn-hero" type="button">Замовити послугу</button>
       </div>
@@ -44,7 +44,7 @@
 
     <!-- ADVANTAGES -->
     <section class="advantages section">
-      <h2>Переваги</h2>
+      <h2 class="visually-hidden">Переваги</h2>
         <div class="container">
           <ul class="list-advantages list">
             <li class="item-advantages">
@@ -134,9 +134,9 @@
       <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
       <address class="footer-address">
         <ul class="footer-list list">
-          <li><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item-footer"><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li class="item-footer"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="item-footer"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </div>
