--- a/portfolio.html
+++ b/portfolio.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>WebStudio</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <!--MODERN-NORMALIZE  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
   
-    <!-- HEDER -->
-    <header class="header container">
-      <div class="container header-container">
-        <nav class="nav">
-        <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
-          <ul class="list-nav list">
-            <li class="item-list"><a class="link" href="./index.html">Студія</a></li>
-            <li class="item-list"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
-            <li class="item-list"><a class="link" href="#">Контакти</a></li>
-          </ul>
-        </nav>
-  
-        <ul class="list-contact list">
-          <li class="item-contact"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="item-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>WebStudio</title>
+</head>
+<body>
+
+  <!-- HEDEAR -->
+  <header class="header">
+    <div class="container header-container">
+      <nav class="nav">
+      <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
+        <ul class="list-nav list">
+          <li class="item-list"><a class="link" href="./index.html">Студія</a></li>
+          <li class="item-list"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+          <li class="item-list"><a class="link" href="#">Контакти</a></li>
         </ul>
-      </div>
-    </header>
+      </nav>
+
+      <ul class="list-contact list">
+        <li class="item-contact"><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item-contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </div>
+  </header>
 
   <main>
     <section class="portfolio sectio">
       <div class="container">
-      <h1>Портфоліо</h1>
+      <h1 class="visually-hidden ">Портфоліо</h1>
       <ul class="list-btn list">
         <li>
           <button class="btn-portfolio active" type="button">Усі</button>
@@ -126,14 +130,15 @@
     </div>
     </section>
   </main>
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <a class="logo" href="./index.html"><span class="logo-decoration">Web</span>Studio</a>
       <address class="footer-address">
         <ul class="footer-list list">
-          <li><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item-footer"><a class="link-adres" href="">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li class="item-footer"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="item-footer"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </div>
