--- a/portfolio.html
+++ b/portfolio.html
@@ -57,74 +57,92 @@
 
       <ul class="list-portfolio list">
         <li>
-          <img src="./images/portfolio-images/portfolio-img.1-min.png" alt="Зображений ноутбук з відкритим сайтом" height="294" width="370">
-          <div class="portfolio-card">
-            <h2 class="title">Технокряк</h2>
-            <p class="text">Веб-сайт</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.1-min.png" alt="Зображений ноутбук з відкритим сайтом" height="294" width="370">
+            <div class="portfolio-card">
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.2-min.png" alt="Постер з двома баскедболістами" height="294" width="370">
-          <div class="portfolio-card">
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-            <p class="text">Дизайн</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.2-min.png" alt="Постер з двома баскедболістами" height="294" width="370">
+            <div class="portfolio-card">
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.3-min.png" alt="Логотип ресторану" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Ресторан Seafood</h2>
-            <p class="text">Додаток</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.3-min.png" alt="Логотип ресторану" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="text">Додаток</p>
+            </div>
+          </a>
         </li>
         <li>
-          <img src="./images/portfolio-images/portfolio-img.4-min.png" alt="Зображення чорних навушників" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Проєкт Prime</h2>
-            <p class="text">Маркетинг</p>
-          </div>
-        </li>
-
-        <li>
-          <img src="./images/portfolio-images/portfolio-img.5-min.png" alt="Зображення двох коробок" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Проєкт Boxes</h2>
-            <p class="text">Додаток</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.4-min.png" alt="Зображення чорних навушників" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Проєкт Prime</h2>
+              <p class="text">Маркетинг</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.6-min.png" alt="Монітор комп'ютера" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.5-min.png" alt="Зображення двох коробок" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Проєкт Boxes</h2>
+              <p class="text">Додаток</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.7-min.png" alt="Зображиний журнал" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Видання Limited Edition</h2>
-            <p class="text">Дизайн</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.6-min.png" alt="Монітор комп'ютера" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.8-min.png" alt="Зображеня лейбла" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Проєкт LAB</h2>
-            <p class="text">Маркетинг</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.7-min.png" alt="Зображиний журнал" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Видання Limited Edition</h2>
+              <p class="text">Дизайн</p>
+            </div>
+          </a>
         </li>
 
         <li>
-          <img src="./images/portfolio-images/portfolio-img.9-min.png" alt="Зображиний ноутбук" height="294" width="370">
-          <div  class="portfolio-card">
-            <h2 class="title">Growing Business</h2>
-            <p class="text">Додаток</p>
-          </div>
+          <a href="" class="portfoloi-link link">
+            <img src="./images/portfolio-images/portfolio-img.8-min.png" alt="Зображеня лейбла" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Проєкт LAB</h2>
+              <p class="text">Маркетинг</p>
+            </div>
+          </a>
+        </li>
+
+        <li>
+          <a href="" class="portfoloi-link">
+            <img src="./images/portfolio-images/portfolio-img.9-min.png" alt="Зображиний ноутбук" height="294" width="370">
+            <div  class="portfolio-card">
+              <h2 class="title">Growing Business</h2>
+              <p class="text">Додаток</p>
+            </div>
+          </a>
         </li>
       </ul>
     </div>
